contour/ingress-alpaca.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alpaca-ingress
spec:
  rules:
  - host: alpaca.example.com
    http:
      paths:
      - backend:
          serviceName: alpaca
          servicePort: 8080
