contour/ingress-be-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: be-default-ingress
spec:
  backend:
    serviceName: be-default
    servicePort: 8080
